--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,13 +34,16 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.1.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "zod": "^4.0.14"
+    "winston": "^3.17.0",
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.2.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "tailwindcss": "^4.1.11",
